--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            align-items: flex-start; /* Alinhar ao topo para permitir rolagem */
+            min-height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
         }
@@ -20,7 +20,9 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
+            max-width: 800px; /* Aumente o valor para aumentar a largura do container */
+            width: 90%; /* Use uma largura percentual para garantir que o site seja responsivo */
+            margin: 20px 0; /* Adiciona margem para dar espaço extra ao redor do container */
         }
         .qr-code img {
             width: 200px;
@@ -49,7 +51,7 @@
         </div>
         <div class="info">
             <h2>Descrição</h2>
-            <p>Bela casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
+            <p> casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
             <h2>Preço</h2>
             <p>R$ 450.000,00</p>
             <h2>Contato</h2>
