--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <p>Telefone: (11) 98272-0837</p>
             <p>Email: contato@imobiliaria.com.br</p>
         </div>
-        <p>Escaneie o QR code abaixo para acessar este site novamente:</p>
+        <p>utilize o link abaixo para acesso a demais fotos da casa:
+
+https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing:</p>
         <div class="qr-code">
             <img src="qr-code.png" alt="QR Code">
         </div>
