--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <h2>Contato</h2>
             <p>Telefone: (11) 98272-0837</p>
             <p>Email: contato@imobiliaria.com.br</p>
-        </div>
-        <p>utilize o link abaixo para acesso a demais fotos da casa:
-
-https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing:</p>
-        <div class="qr-code">
-            <img src="qr-code.png" alt="QR Code">
+       </div>
+        <p>Clique na imagem abaixo para acessar o link com as demais imagens da casa:</p>
+        <div class="link-img">
+            <a href="https://seulink.com" target="_blank">
+                <img src="imagem-link.png" alt="Imagem do Link">
+            </a>
         </div>
     </div>
 </body>
