--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
        </div>
         <p>Clique na imagem abaixo para acessar o link com as demais imagens da casa:</p>
         <div class="link-img">
-            <a href="https://seulink.com" target="_blank">
+            <a href="https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing" target="_blank">
                 <img src="imagem-link.png" alt="Imagem do Link">
             </a>
         </div>
