--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             max-width: 800px; /* Aumente o valor para aumentar a largura do container */
             width: 90%; /* Use uma largura percentual para garantir que o site seja responsivo */
             margin: 20px 0; /* Adiciona margem para dar espaço extra ao redor do container */
-        }
-        .qr-code img {
-            width: 200px;
-            height: 200px;
+         }
+        .link-img img {
+            width: 100px; /* Ajuste a largura conforme necessário */
+            height: auto; /* Mantém a proporção da imagem */
         }
         .photos img {
             max-width: 100%;
