--- a/index.html
+++ b/index.html
@@ -4,41 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa à Venda</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
-            align-items: flex-start; /* Alinhar ao topo para permitir rolagem */
+            align-items: flex-start;
             min-height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
+            color: #333;
         }
         .container {
-            text-align: center;
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 800px; /* Aumente o valor para aumentar a largura do container */
-            width: 90%; /* Use uma largura percentual para garantir que o site seja responsivo */
-            margin: 20px 0; /* Adiciona margem para dar espaço extra ao redor do container */
-         }
-        .link-img img {
-            width: 100px; /* Ajuste a largura conforme necessário */
-            height: auto; /* Mantém a proporção da imagem */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+            width: 90%;
+            margin: 20px 0;
+            text-align: center;
+        }
+        h1 {
+            color: #2c3e50;
+            font-size: 2.5em;
+            margin-bottom: 20px;
         }
         .photos img {
             max-width: 100%;
             height: auto;
             border-radius: 8px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         .info {
             text-align: left;
+            margin-bottom: 20px;
         }
-        .info h2, .info p {
+        .info h2 {
+            color: #2980b9;
+            font-size: 1.5em;
             margin: 10px 0;
+        }
+        .info p {
+            font-size: 1.1em;
+            line-height: 1.6;
+            margin: 10px 0;
+        }
+        .link-img img {
+            width: 100px;
+            height: auto;
+            transition: transform 0.3s;
+        }
+        .link-img img:hover {
+            transform: scale(1.1);
+        }
+        a {
+            text-decoration: none;
+            color: #2980b9;
         }
     </style>
 </head>
@@ -51,16 +75,16 @@
         </div>
         <div class="info">
             <h2>Descrição</h2>
-            <p> casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
+            <p>casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
             <h2>Preço</h2>
             <p>R$ 450.000,00</p>
             <h2>Contato</h2>
-            <p>Telefone: (11) 98272-0837</p>
+            <p>Telefone: (11) 1234-5678</p>
             <p>Email: contato@imobiliaria.com.br</p>
-       </div>
+        </div>
         <p>Clique na imagem abaixo para acessar o link com as demais imagens da casa:</p>
         <div class="link-img">
-            <a href="https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing" target="_blank">
+            <a href="https://seulink.com" target="_blank">
                 <img src="imagem-link.png" alt="Imagem do Link">
             </a>
         </div>
