--- a/index.html
+++ b/index.html
@@ -4,39 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa à Venda</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #eaeaea;
+            background-color: #f7f7f7;
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
             min-height: 100vh;
             color: #333;
         }
         .container {
-            background-color: #f5f5f5;
+            background-color: #fff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             max-width: 800px;
             width: 90%;
-            margin: 20px auto;
-            text-align: center;
-            flex-grow: 1;
-        }
-        header {
-            background-color: #4a4a4a;
-            padding: 20px;
-            color: white;
+            margin: 20px 0;
             text-align: center;
         }
-        header h1 {
-            font-family: 'Lobster', cursive;
-            font-size: 3em;
-            margin: 0;
+        h1 {
+            color: #2c3e50;
+            font-size: 2.5em;
+            margin-bottom: 20px;
         }
         .photos img {
             max-width: 100%;
@@ -49,7 +43,7 @@
             margin-bottom: 20px;
         }
         .info h2 {
-            color: #4a90e2;
+            color: #2980b9;
             font-size: 1.5em;
             margin: 10px 0;
         }
@@ -68,21 +62,13 @@
         }
         a {
             text-decoration: none;
-            color: #4a90e2;
-        }
-        footer {
-            background-color: #4a4a4a;
-            padding: 10px;
-            color: white;
-            text-align: center;
+            color: #2980b9;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Casa dos Seus Sonhos</h1>
-    </header>
     <div class="container">
+        <h1>Casa à Venda</h1>
         <div class="photos">
             <img src="foto1.jpg" alt="Foto da Casa 1">
             <img src="foto2.jpg" alt="Foto da Casa 2">
@@ -103,8 +89,5 @@
             </a>
         </div>
     </div>
-    <footer>
-        <p>&copy; 2024 Casa dos Seus Sonhos. Todos os direitos reservados.</p>
-    </footer>
 </body>
 </html>
