--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
         </div>
         <div class="info">
             <h2>Descrição</h2>
-            <p>Bela casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
+            <p>casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
             <h2>Preço</h2>
             <p>R$ 450.000,00</p>
             <h2>Contato</h2>
             <p>Telefone: (11) 1234-5678</p>
             <p>Email: contato@imobiliaria.com.br</p>
         </div>
-        <p>Clique na imagem abaixo para acessar o link:</p>
+        <p>Clique na imagem abaixo para acessar mais fotos da casa:</p>
         <div class="link-img">
-            <a href="https://seulink.com" target="_blank">
+            <a href="https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing" target="_blank">
                 <img src="imagem-link.png" alt="Imagem do Link">
             </a>
         </div>
