--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         <div class="photos">
             <img src="foto1.jpg" alt="Foto da Casa 1">
             <img src="foto2.jpg" alt="Foto da Casa 2">
+            <img src="foto3.jpg" alt="Foto da Casa 3">
+            <img src="foto4.jpg" alt="Foto da Casa 4">
         </div>
         <div class="info">
             <h2>Descrição</h2>
