--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa à Venda</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Anton" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -58,7 +58,7 @@
             transition: transform 0.3s;
         }
         .link-img img:hover {
-            transform: scale(1.1);
+            transform: scale(0,5.0,5);
         }
         a {
             text-decoration: none;
