--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
             color: #2c3e50;
             font-size: 2.5em;
             margin-bottom: 20px;
-        }
+        }.photos {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
         .photos img {
-            max-width: 50%;
+            max-width: 48%;
             height: auto;
             border-radius: 8px;
             margin-bottom: 20px;
