--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             color: #2c3e50;
             font-size: 2.5em;
             margin-bottom: 20px;
-        }.photos {
+        }
+        .photos {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
