--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Casa à Venda</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -37,8 +36,9 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
+        }
         .photos img {
-            max-width: 48%;
+            width: 48%;
             height: auto;
             border-radius: 8px;
             margin-bottom: 20px;
@@ -82,7 +82,7 @@
         </div>
         <div class="info">
             <h2>Descrição</h2>
-            <p>casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
+            <p>Bela casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
             <h2>Preço</h2>
             <p>R$ 450.000,00</p>
             <h2>Contato</h2>
