--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             margin-bottom: 20px;
         }
         .info h2 {
-            color: #2980b9;
+            color: #696969;
             font-size: 1.5em;
             margin: 10px 0;
         }
