--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="footer">
             <a href="https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing" target="_blank">
-                <img src="imagem-link-drive.png" alt="Link para o Drive">
+                <img src="imagem-link.png" alt="Link para o Drive">
             </a>
             <a href="https://outro-link.com" target="_blank">
                 <img src="imagem-link-outro.png" alt="Outro Link">
