--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         .footer img:hover {
             transform: scale(1.1);
         }
+        .footer p {
+            margin-top: 10px;
+            font-size: 1em;
+            color: #000; /* Define a cor preta para a descrição */
         a {
             text-decoration: none;
             color: #2980b9;
@@ -92,7 +96,7 @@
         </div>
         <div class="info">
             <h2>Descrição</h2>
-            <p>Bela casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
+            <p>casa com 3 quartos, 2 banheiros, cozinha moderna, sala de estar espaçosa e quintal grande.</p>
             <h2>Preço</h2>
             <p>R$ 450.000,00</p>
             <h2>Contato</h2>
@@ -103,9 +107,11 @@
             <a href="https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing" target="_blank">
                 <img src="imagem-link.png" alt="Link para o Drive">
             </a>
+                <p>Mais fotos no Drive</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGcB-mpkeQgJXQ5BgYYBGiVfxKx1Ykp3zTLbmP7QHropw4kQ/viewform?usp=sf_link" target="_blank">
                 <img src="imagem-link-outro.png" alt="Outro Link">
             </a>
+             <p>Formulario para proposta de compra</p>
         </div>
     </div>
 </body>
