--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
             <a href="https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing" target="_blank">
                 <img src="imagem-link.png" alt="Link para o Drive">
             </a>
-                <p>Mais fotos no Drive</p>
+                <p>Mais fotos 
+                 no Drive</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGcB-mpkeQgJXQ5BgYYBGiVfxKx1Ykp3zTLbmP7QHropw4kQ/viewform?usp=sf_link" target="_blank">
                 <img src="imagem-link-outro.png" alt="Outro Link">
             </a>
-             <p>Formulario para proposta de compra</p>
+             <p>Formulario para 
+            proposta de compra</p>
         </div>
     </div>
 </body>
