Atualização: WhatsApp +55 11 98272-0837, cores modernas azul/vermelho, título realista, remoção links Google

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Casa dos Sonhos - À Venda</title>
+    <title>Casa à Venda - 3 Quartos | R$ 450.000</title>
     <style>
         * {
             margin: 0;
@@ -17,14 +17,14 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             min-height: 100vh;
             color: #333;
             overflow-x: hidden;
         }
 
         .hero-section {
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.9), rgba(118, 75, 162, 0.9));
+            background: linear-gradient(135deg, rgba(30, 60, 114, 0.95), rgba(42, 82, 152, 0.95));
             padding: 60px 20px;
             text-align: center;
             color: white;
@@ -105,7 +105,7 @@
         }
 
         .price-banner {
-            background: linear-gradient(135deg, #ff6b6b, #ee5a24);
+            background: linear-gradient(135deg, #e74c3c, #c0392b);
             color: white;
             text-align: center;
             padding: 20px;
@@ -207,20 +207,20 @@
             border-radius: 15px;
             text-align: center;
             transition: all 0.3s ease;
-            border: 1px solid rgba(102, 126, 234, 0.1);
+            border: 1px solid rgba(30, 60, 114, 0.1);
         }
 
         .info-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 35px rgba(102, 126, 234, 0.1);
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            box-shadow: 0 15px 35px rgba(30, 60, 114, 0.15);
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
             color: white;
         }
 
         .info-card i {
             font-size: 2.5rem;
             margin-bottom: 15px;
-            color: #667eea;
+            color: #1e3c72;
             transition: color 0.3s ease;
         }
 
@@ -276,55 +276,15 @@
 
         .feature-item i {
             font-size: 1.5rem;
-            color: #667eea;
+            color: #1e3c72;
             margin-right: 15px;
         }
 
         .footer-section {
-            background: linear-gradient(135deg, #2c3e50, #34495e);
+            background: linear-gradient(135deg, #34495e, #2c3e50);
             color: white;
             padding: 40px;
             text-align: center;
-        }
-
-        .footer-links {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 30px;
-            margin-bottom: 30px;
-        }
-
-        .footer-link {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-decoration: none;
-            color: white;
-            transition: all 0.3s ease;
-            padding: 20px;
-            border-radius: 15px;
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-        }
-
-        .footer-link:hover {
-            transform: translateY(-5px);
-            background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        .footer-link img {
-            width: 60px;
-            height: 60px;
-            object-fit: contain;
-            margin-bottom: 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .footer-link:hover img {
-            transform: scale(1.1);
         }
 
         /* WhatsApp Floating Button */
@@ -428,10 +388,6 @@
                 bottom: 20px;
                 right: 20px;
             }
-            
-            .footer-links {
-                flex-direction: column;
-            }
         }
 
         /* Smooth scrolling */
@@ -456,8 +412,8 @@
     <!-- Hero Section -->
     <div class="hero-section">
         <div class="hero-content">
-            <h1 class="hero-title">Casa dos Sonhos</h1>
-            <p class="hero-subtitle">Sua nova casa te espera • Localização privilegiada • Pronta para morar</p>
+            <h1 class="hero-title">Casa à Venda</h1>
+            <p class="hero-subtitle">3 quartos • 2 banheiros • Quintal amplo • Pronta para morar</p>
         </div>
     </div>
 
@@ -554,7 +510,7 @@
                 <div class="info-card fade-in">
                     <i class="fas fa-phone"></i>
                     <h3>Contato</h3>
-                    <p><strong>Telefone:</strong> (11) 1234-5678<br>
+                    <p><strong>Telefone:</strong> (11) 98272-0837<br>
                     <strong>Email:</strong> contato@imobiliaria.com.br</p>
                 </div>
             </div>
@@ -562,25 +518,26 @@
 
         <!-- Footer Section -->
         <div class="footer-section">
-            <h3 style="margin-bottom: 30px; font-size: 2rem;">Documentação e Mais Informações</h3>
-            <div class="footer-links">
-                <a href="https://drive.google.com/drive/folders/1KgNwi9LktyW4U3QUgjLJUZeSIWwG4RZ3?usp=sharing" target="_blank" class="footer-link">
-                    <img src="imagem-link.png" alt="Galeria de Fotos">
-                    <div>
-                        <strong>Galeria Completa</strong>
-                        <p>Mais fotos no Drive</p>
-                    </div>
-                </a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGcB-mpkeQgJXQ5BgYYBGiVfxKx1Ykp3zTLbmP7QHropw4kQ/viewform?usp=sf_link" target="_blank" class="footer-link">
-                    <img src="imagem-link-outro.png" alt="Formulário de Proposta">
-                    <div>
-                        <strong>Faça sua Proposta</strong>
-                        <p>Formulário de compra</p>
-                    </div>
-                </a>
+            <h3 style="margin-bottom: 20px; font-size: 2rem;">Entre em Contato</h3>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; margin-bottom: 30px;">
+                <div style="text-align: center;">
+                    <i class="fas fa-phone" style="font-size: 2rem; margin-bottom: 10px; color: #25d366;"></i>
+                    <p><strong>Telefone</strong></p>
+                    <p>(11) 98272-0837</p>
+                </div>
+                <div style="text-align: center;">
+                    <i class="fab fa-whatsapp" style="font-size: 2rem; margin-bottom: 10px; color: #25d366;"></i>
+                    <p><strong>WhatsApp</strong></p>
+                    <p>Clique no botão flutuante</p>
+                </div>
+                <div style="text-align: center;">
+                    <i class="fas fa-envelope" style="font-size: 2rem; margin-bottom: 10px; color: #25d366;"></i>
+                    <p><strong>Email</strong></p>
+                    <p>contato@imobiliaria.com.br</p>
+                </div>
             </div>
             <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
-                <p><i class="fas fa-heart" style="color: #ff6b6b;"></i> Encontre seu novo lar conosco</p>
+                <p><i class="fas fa-home" style="color: #25d366;"></i> Casa pronta para você e sua família</p>
             </div>
         </div>
     </div>
@@ -613,8 +570,7 @@
 
         // WhatsApp function
         function openWhatsApp() {
-            // SUBSTITUA pelo número desejado (inclua código do país)
-            const phoneNumber = "5511999999999"; // Exemplo: 55 (Brasil) + 11 (DDD) + número
+            const phoneNumber = "5511982720837"; // +55 11 98272-0837
             const message = "Olá! Tenho interesse na casa anunciada no site. Gostaria de mais informações.";
             const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
             window.open(whatsappURL, '_blank');
