Adiciona características premium: aquecimento de piscina, portas automotivas, granito e espelhos LED

--- a/index.html
+++ b/index.html
@@ -276,10 +276,9 @@
         .features-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
-        }
-
-        .feature-card {
+            gap: 30px;
+            margin-top: 40px;
+        }        .feature-card {
             background: var(--light-gray);
             padding: 30px;
             border-radius: 15px;
@@ -556,6 +555,26 @@
                         <p class="feature-description">Sistema conectado com Alexa e controle remoto via celular</p>
                     </div>
                     <div class="feature-card">
+                        <div class="feature-icon"><i class="fas fa-swimming-pool"></i></div>
+                        <h3 class="feature-title">Aquecimento de Piscina</h3>
+                        <p class="feature-description">Sistema com trocador de calor e aquecimento solar</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon"><i class="fas fa-door-open"></i></div>
+                        <h3 class="feature-title">Portas Premium</h3>
+                        <p class="feature-description">Portas sólidas com pintura branca automotiva e fechaduras texturizadas</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon"><i class="fas fa-gem"></i></div>
+                        <h3 class="feature-title">Acabamentos Nobres</h3>
+                        <p class="feature-description">Pias em granito São Gabriel escovado e detalhes em Quartzo Branco</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon"><i class="fas fa-mirror"></i></div>
+                        <h3 class="feature-title">Espelhos com LED</h3>
+                        <p class="feature-description">Iluminação LED integrada em todos os banheiros</p>
+                    </div>
+                    <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-car-battery"></i></div>
                         <h3 class="feature-title">Energia Sustentável</h3>
                         <p class="feature-description">Geração fotovoltaica e ponto para carro elétrico na garagem</p>
@@ -566,19 +585,14 @@
                         <p class="feature-description">Banheira de imersão e closet com ar condicionado</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon"><i class="fas fa-fire"></i></div>
-                        <h3 class="feature-title">Aquecimento Central</h3>
-                        <p class="feature-description">Boiler com sistema de aquecimento central de água</p>
-                    </div>
-                    <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-window-maximize"></i></div>
                         <h3 class="feature-title">Esquadrias Motorizadas</h3>
                         <p class="feature-description">Padrão Gold 2,50m altura com mosqueteiro e controle remoto</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon"><i class="fas fa-universal-access"></i></div>
-                        <h3 class="feature-title">Acessibilidade</h3>
-                        <p class="feature-description">Suíte no térreo com total acessibilidade</p>
+                        <div class="feature-icon"><i class="fas fa-fire"></i></div>
+                        <h3 class="feature-title">Aquecimento Central</h3>
+                        <p class="feature-description">Boiler com sistema de aquecimento central de água</p>
                     </div>
                 </div>
             </div>
