Corrige ícone dos espelhos LED (fa-mirror para fa-star)

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                         <p class="feature-description">Pias em granito São Gabriel escovado e detalhes em Quartzo Branco</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon"><i class="fas fa-mirror"></i></div>
+                        <div class="feature-icon"><i class="fas fa-star"></i></div>
                         <h3 class="feature-title">Espelhos com LED</h3>
                         <p class="feature-description">Iluminação LED integrada em todos os banheiros</p>
                     </div>
