Atualiza preço para R$ 3.490.000, remove 'pronta para morar', melhora acabamentos nobres com escada em quartzo, suíte master com dourado e acabamentos especiais com box até teto

--- a/index.html
+++ b/index.html
@@ -513,8 +513,8 @@
     <div class="container">
         <!-- Price Section -->
         <div class="price-section">
-            <div class="price">R$ 450.000</div>
-            <div class="price-note">Oportunidade única • Pronta para morar</div>
+            <div class="price">R$ 3.490.000</div>
+            <div class="price-note">Oportunidade única</div>
         </div>
 
         <!-- Photo Gallery -->
@@ -567,7 +567,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-gem"></i></div>
                         <h3 class="feature-title">Acabamentos Nobres</h3>
-                        <p class="feature-description">Pias em granito São Gabriel escovado e detalhes em Quartzo Branco</p>
+                        <p class="feature-description">Pias em granito São Gabriel escovado e escada em quartzo branco</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-star"></i></div>
@@ -582,7 +582,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-hot-tub"></i></div>
                         <h3 class="feature-title">Suíte Master Premium</h3>
-                        <p class="feature-description">Banheira de imersão e closet com ar condicionado</p>
+                        <p class="feature-description">Banheira de imersão com acabamentos em dourado</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-window-maximize"></i></div>
@@ -628,7 +628,7 @@
                     </div>
                     <div class="spec-card">
                         <h4>Acabamentos Especiais</h4>
-                        <p>Banheira de imersão na suíte master e pé direito duplo nos ambientes sociais</p>
+                        <p>Banheira de imersão na suíte master e box até o teto em todos os banheiros</p>
                     </div>
                 </div>
             </div>
