--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-gem"></i></div>
                         <h3 class="feature-title">Acabamentos Nobres</h3>
-                        <p class="feature-description">Pias em granito São Gabriel escovado e escada em quartzo branco</p>
+                        <p class="feature-description">Pias em granito São Gabriel escovado, escada e lavabo em Quartzo Branco.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-star"></i></div>
